# Changelog

All notable changes to this project will be documented in this file. The format is based on [Keep a Changelog][Keep a Changelog].


## [4.0.0] - 2020-12-16

**This is a BETA release**

For this release MPC has undergone a massive refactoring. It is in some aspects not compatible with previous versions of MPC. It should bring several enhancements in terms of installation process and modularity. One should not expect binary compatibility with a previous version of MPC. Due to the massive changes, this changelog cannot be fully exhaustive.

### Modularity
MPC is now modular and comes in several components:

- `lowcomm` : component handling and providing the networks interfaces
- `threads` : component handling and providing the user-level thread scheduler
- `mpi` : component handling and providing the MPI standard API
- `mpiio` :  component handling and providing the IO part of the MPI standard API
- `openmp` :  component handling and providing the OpenMP standard API
- `fortran` : component handling and providing the Fortran interface for the above parallel programming APIs
- ... and other internal components

Such aforementioned components can be enabled and disabled using `--enable/disable-XX` as mpc-options in the installation script, or through variants in the new Spack building recipe.
Note that some components are dependent and cannot be installed if the dependencies are disabled (e.g., `mpiio` depends on `mpi`, and cannot be installed if `mpi` is disabled).

### Added

- **PMIX**: PMIX is now supported through `--with-pmix`
- **PRIV**: Support for new GCCs (using now external autopriv) up to 10.2.0 (using `--gcc-version=X.X.X`)
- **STATUS**: the `mpc_status` command can be used to print current MPC configuration
- **BUILD**: once installed with `./installmpc` MPC can be reconfigured with `./reconfigure` in the build directory. MPC is now longer in an `mpcframework` subdirectory

### Changed
